--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escape From Tarkov</title>
-    <link rel="stylesheet" href="./index.css">
-    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./index.css/">
+    <script src="./index.js/" defer></script>
 </head>
 <body>
     <header>
@@ -15,30 +15,30 @@
         </div>
     </header>
     <main>
-        <section class="about">
-            <h2>Escape From Tarkov</h2>
-            <p></p>
-            <img src="imgs\usecbearmain.png\">
-        </section>
-        <section class="comments">
-            <div class="cards-container">
-                <div class="bear">
-                    <img src="">
-                    <p></p>
+            <section class="about">
+                <h2>Escape From Tarkov</h2>
+                <p></p>
+                <img src="imgs\usecbearmain.png\">
+            </section>
+            <section class="comments">
+                <div class="cards-container">
+                    <div class="bear">
+                        <img src="">
+                        <p></p>
+                    </div>
+                    <div class="usec">
+                        <img src="">
+                        <p></p>
+                    </div>
                 </div>
-                <div class="usec">
-                    <img src="">
-                    <p></p>
-                </div>
-            </div>
-        </section>
-        <section class="features">
-            <ul class="features-list">
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </section>
+            </section>
+            <section class="features">
+                <ul class="features-list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
     </main>
     <footer>
         <div class="contacts">
