--- a/index.html
+++ b/index.html
@@ -17,46 +17,50 @@
                 <h1 class="eftinfo">Это хардкорная реалистичная сюжетная многопользовательская онлайн-игра, сочетающая в себе черты жанров FPS / TPS, боевого симулятора и RPG c ММО элементами.</h1>
                 <img src="imgs\getrdyfescape.png\" class="getready">
                 <div class="gameinfo">
-                <img src="imgs\norvinsk.png" class="gameinfoimg">
+                <img src="imgs\norvinsk.png" class="imgs">
                 <h3>События Escape from Tarkov происходят в вымышленной Норвинской особой экономической зоне, бывшей в пору своего расцвета мостом между Россией и Европой. К несчастью, льготные условия налогообложения и преференции для иностранных инвесторов привлекли к региону внимание не только законопослушных компаний, но и корпорации с более чем сомнительными намерениями. В Таркове, одном из крупнейших городов региона, разразился коррупционный скандал, в эпицентре которого оказалась трансатлантическая корпорация. Шесть месяцев спустя, политическое противостояние вылилось в открытые вооруженные столкновения на улицах города между миротворцами ООН, внутренними войсками МВД и двумя частными военными компаниями. Границы области были вскоре заблокированы, отрезая от внешнего мира тех, кто попал в ловушку разгорающегося локального конфликта.</h3>
                 </div>
             </section>
             <section class="comments">
-                <div class="PMC">
-                    <div class="bear">
-                        <img src="imgs\bearlogo.png\" class="pmcicon">
+                    <div>
                         <h2>Battle Encounter Assault Regiment</h2>
+                        <img src="imgs\bearlogo.png\" class="pmcicon">
                         <p>Является частной военной компанией одной из главных фракций в Escape from Tarkov. Компания BEAR используется правительственными органами Норвинского региона для выявления любых доказательств незаконной деятельности группы Terra Group.</p>
                     </div>
-                    <div class="usec">
-                        <img src="imgs\useclogo.png\" class="pmcicon"> 
+                    <div>
                         <h2>United Security</h2>
+                        <img src="imgs\useclogo.png\" class="pmcicon"> 
                         <p>Является частной военной компанией одной из главных фракций в Escape from Tarkov. USEC работает на международную корпорацию Terra Group, активно участвует в вооруженных столкновениях, препятствующих расследованию деятельности Terra Group, осуществляемой местными органами власти. Более того, по данным спецслужб, USEC обеспечивает вооруженным прикрытием незаконную работу и исследования иностранной компании.</p>
                     </div>
-                </div>
             </section>
             <section class="features">
                 <ul class="features-list">
-                    <div class="featurea">
                     <h2>Прочувствуйте игру до конца благодаря глубочайшей имитации боевых условий.</h2>
-                    <img src="imgs\img3.png\" class="infoimgs">  
-                    <li>Встречайте новый системный модуль СБЭУ - симулятор боя в экстремальных условиях.</li>
-                    <li>Примите во внимание реальную баллистику и физику пробитий.</li>
-                    <li>Привыкайте к явлениям, характерным для любого оружия - клинам, перегревам, износу, перезарядке, прицеливанию, заряжанию и, конечно, стрельбе.</li>
-                    </div>
-                    <div class="featureb">
+                    <div class="feature">
+                        <img src="imgs\img3.png\" class="imgs">  
+                        <div class="featurestext">
+                            <p>1. Встречайте новый системный модуль СБЭУ - симулятор боя в экстремальных условиях.
+                            <br><br>2. Примите во внимание реальную баллистику и физику пробитий.
+                            <br><br>3. Привыкайте к явлениям, характерным для любого оружия - клинам, перегревам, износу, перезарядке, прицеливанию, заряжанию и, конечно, стрельбе.</p>
+                        </div>
+                    </div> 
                     <h2>Выживайте и будьте начеку.</h2>
-                    <img src="imgs\img1.png\" class="infoimgs">  
-                    <li>Используйте спецсредства - очки ночного видения, рации и гарнитуры, шлемы и бронежилеты - для получения превосходства над противником.</li>
-                    <li>В случае гибели, вы теряете все, что взяли с собой в рейд или нашли в нем - а потому готовьте резервные комплекты экипировки, организуйте схроны, используйте защищенные контейнеры и страховку.</li>
-                    <li>Объединитесь ли вы с незнакомцами или получите пулю в спину от друга - правил нет. Их пишете вы.</li>
+                    <div class="feature">
+                        <img src="imgs\img1.png\" class="imgs">  
+                        <div class="featurestext">
+                            <p>1. Используйте спецсредства - очки ночного видения, рации и гарнитуры, шлемы и бронежилеты - для получения превосходства над противником.
+                            <br><br>2. В случае гибели, вы теряете все, что взяли с собой в рейд или нашли в нем - а потому готовьте резервные комплекты экипировки, организуйте схроны, используйте защищенные контейнеры и страховку.
+                            <br><br>3. Объединитесь ли вы с незнакомцами или получите пулю в спину от друга - правил нет. Их пишете вы.</p>
+                        </div>
                     </div>
-                    <div class="featurec">
                     <h2>Берегитесь Диких.</h2>
-                    <img src="imgs\scav.png\" class="infoimgs">  
-                    <li>Чем громче вы шумите, тем быстрее они приходят, так что держите палец на спуске.</li>
-                    <li>Вступайте в бои с управляемыми ИИ местными мародерами Дикими, или попробуйте себя в роли одного из них - с заранее заданным произвольным снаряжением, состоянием здоровья и оружием.</li>
-                    <li>Играя за них, не стоит бояться смерти, - ваш основной персонаж ничего не потеряет, но если вы выживете в роли Дикого - его добыча пополнит схрон вашего героя.</li>
+                    <div class="feature">
+                        <img src="imgs\scav.png\" class="imgs">
+                        <div class="featurestext">
+                            <p>1. Чем громче вы шумите, тем быстрее они приходят, так что держите палец на спуске.
+                            <br><br>2. Вступайте в бои с управляемыми ИИ местными мародерами Дикими, или попробуйте себя в роли одного из них - с заранее заданным произвольным снаряжением, состоянием здоровья и оружием.
+                            <br><br>3. Играя за них, не стоит бояться смерти, - ваш основной персонаж ничего не потеряет, но если вы выживете в роли Дикого - его добыча пополнит схрон вашего героя.</p>
+                        </div>
                     </div>  
                 </ul>
             </section>
