--- a/index.html
+++ b/index.html
@@ -13,25 +13,29 @@
     </header>
     <main>
             <section class="about">
-                <img src="imgs\EFT.png\">
+                <a href="https://www.escapefromtarkov.com/"><img src="imgs\EFT.png\"></a>
                 <h1 class="eftinfo">Это хардкорная реалистичная сюжетная многопользовательская онлайн-игра, сочетающая в себе черты жанров FPS / TPS, боевого симулятора и RPG c ММО элементами.</h1>
                 <img src="imgs\getrdyfescape.png\" class="getready">
                 <div class="gameinfo">
-                <img src="imgs\norvinsk.png" class="imgs">
-                <h3>События Escape from Tarkov происходят в вымышленной Норвинской особой экономической зоне, бывшей в пору своего расцвета мостом между Россией и Европой. К несчастью, льготные условия налогообложения и преференции для иностранных инвесторов привлекли к региону внимание не только законопослушных компаний, но и корпорации с более чем сомнительными намерениями. В Таркове, одном из крупнейших городов региона, разразился коррупционный скандал, в эпицентре которого оказалась трансатлантическая корпорация. Шесть месяцев спустя, политическое противостояние вылилось в открытые вооруженные столкновения на улицах города между миротворцами ООН, внутренними войсками МВД и двумя частными военными компаниями. Границы области были вскоре заблокированы, отрезая от внешнего мира тех, кто попал в ловушку разгорающегося локального конфликта.</h3>
+                    <h2><img src="imgs\norvinsk.png" class="imgs">Город Тарков, Норвинская область, наши дни.</h2>
+                    <h3>События Escape from Tarkov происходят в вымышленной Норвинской особой экономической зоне, бывшей в пору своего расцвета мостом между Россией и Европой. К несчастью, льготные условия налогообложения и преференции для иностранных инвесторов привлекли к региону внимание не только законопослушных компаний, но и корпорации с более чем сомнительными намерениями. В Таркове, одном из крупнейших городов региона, разразился коррупционный скандал, в эпицентре которого оказалась трансатлантическая корпорация. Шесть месяцев спустя, политическое противостояние вылилось в открытые вооруженные столкновения на улицах города между миротворцами ООН, внутренними войсками МВД и двумя частными военными компаниями. Границы области были вскоре заблокированы, отрезая от внешнего мира тех, кто попал в ловушку разгорающегося локального конфликта.</h3>
+                </div>
+                <div class="gameinfo">
+                    <h3>Главными действующими силами в Норвинской области остаются две частные военные компании, нанятые сторонами изначального конфликта. USEC, нанятые скандально известной международной корпорацией Terra Group, в яростных схватках защищают объекты работодателя, активно препятствуя проводимому местными властями расследованию деятельности корпорации. Более того, по данным разведслужб, USEC также обеспечивает силовую поддержку и прикрытие незаконных работ и исследований иностранной компании. Им противостоит частная военная структура BEAR, по слухам, созданная по приказу Правительства России, но формально нанятая властями Норвинской области для расследования и добычи любых доказательств противоправных действий Terra Group.</h3>
+                    <h2><img src="imgs\norvinsk.png" class="imgs">Схватка на краю пропасти.</h2>
                 </div>
             </section>
             <section class="comments">
-                    <div>
-                        <h2>Battle Encounter Assault Regiment</h2>
-                        <img src="imgs\bearlogo.png\" class="pmcicon">
-                        <p>Является частной военной компанией одной из главных фракций в Escape from Tarkov. Компания BEAR используется правительственными органами Норвинского региона для выявления любых доказательств незаконной деятельности группы Terra Group.</p>
-                    </div>
-                    <div>
-                        <h2>United Security</h2>
-                        <img src="imgs\useclogo.png\" class="pmcicon"> 
-                        <p>Является частной военной компанией одной из главных фракций в Escape from Tarkov. USEC работает на международную корпорацию Terra Group, активно участвует в вооруженных столкновениях, препятствующих расследованию деятельности Terra Group, осуществляемой местными органами власти. Более того, по данным спецслужб, USEC обеспечивает вооруженным прикрытием незаконную работу и исследования иностранной компании.</p>
-                    </div>
+                <div>
+                    <h2>Battle Encounter Assault Regiment</h2>
+                    <img src="imgs\bearlogo.png\" class="pmcicon">
+                    <p>Является частной военной компанией одной из главных фракций в Escape from Tarkov. Компания BEAR используется правительственными органами Норвинского региона для выявления любых доказательств незаконной деятельности группы Terra Group.</p>
+                </div>
+                <div>
+                    <h2>United Security</h2>
+                    <img src="imgs\useclogo.png\" class="pmcicon"> 
+                    <p>Является частной военной компанией одной из главных фракций в Escape from Tarkov. USEC работает на международную корпорацию Terra Group, активно участвует в вооруженных столкновениях, препятствующих расследованию деятельности Terra Group, осуществляемой местными органами власти. Более того, по данным спецслужб, USEC обеспечивает вооруженным прикрытием незаконную работу и исследования иностранной компании.</p>
+                </div>
             </section>
             <section class="features">
                 <ul class="features-list">
@@ -64,6 +68,9 @@
                     </div>  
                 </ul>
             </section>
+            <footer>
+
+            </footer>
     </main>
 </body>
 </html>
