--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
+<div class="wrapper">
+<div>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escape From Tarkov</title>
     <link rel="stylesheet" href="css\index.css">
-    <script src="./index.js/" defer></script>
+    <script src=""></script>
 </head>
 <body>
     <header>
-        <div class="background" style="background-image: url(imgs/usecbearmain.png)"></div>
+            <div class="background" style="background-image: url(imgs/usecbearmain.png)"></div>
     </header>
     <main>
             <section class="about">
@@ -17,7 +19,7 @@
                 <h1 class="eftinfo">Это хардкорная реалистичная сюжетная многопользовательская онлайн-игра, сочетающая в себе черты жанров FPS / TPS, боевого симулятора и RPG c ММО элементами.</h1>
                 <img src="imgs\getrdyfescape.png\" class="getready">
                 <div class="gameinfo">
-                    <h2><img src="imgs\norvinsk.png" class="imgs">Город Тарков, Норвинская область, наши дни.</h2>
+                    <h2><img src="imgs\norvinsk.png" class="imgs">г. Тарков, Норвинская обл. наши дни.</h2>
                     <h3>События Escape from Tarkov происходят в вымышленной Норвинской особой экономической зоне, бывшей в пору своего расцвета мостом между Россией и Европой. К несчастью, льготные условия налогообложения и преференции для иностранных инвесторов привлекли к региону внимание не только законопослушных компаний, но и корпорации с более чем сомнительными намерениями. В Таркове, одном из крупнейших городов региона, разразился коррупционный скандал, в эпицентре которого оказалась трансатлантическая корпорация. Шесть месяцев спустя, политическое противостояние вылилось в открытые вооруженные столкновения на улицах города между миротворцами ООН, внутренними войсками МВД и двумя частными военными компаниями. Границы области были вскоре заблокированы, отрезая от внешнего мира тех, кто попал в ловушку разгорающегося локального конфликта.</h3>
                 </div>
                 <div class="gameinfo">
@@ -52,25 +54,22 @@
                     <div class="feature">
                         <img src="imgs\img1.png\" class="imgs">  
                         <div class="featurestext">
-                            <p>1. Используйте спецсредства - очки ночного видения, рации и гарнитуры, шлемы и бронежилеты - для получения превосходства над противником.
-                            <br><br>2. В случае гибели, вы теряете все, что взяли с собой в рейд или нашли в нем - а потому готовьте резервные комплекты экипировки, организуйте схроны, используйте защищенные контейнеры и страховку.
-                            <br><br>3. Объединитесь ли вы с незнакомцами или получите пулю в спину от друга - правил нет. Их пишете вы.</p>
+                            <p>1. Используйте спецсредства - очки ночного видения, рации и гарнитуры, шлемы и бронежилеты - для получения превосходства над противником.<br><br>2. В случае гибели, вы теряете все, что взяли с собой в рейд или нашли в нем - а потому готовьте резервные комплекты экипировки, организуйте схроны, используйте защищенные контейнеры и страховку.<br><br>3. Объединитесь ли вы с незнакомцами или получите пулю в спину от друга - правил нет. Их пишете вы.</p>
                         </div>
                     </div>
                     <h2>Берегитесь Диких.</h2>
                     <div class="feature">
                         <img src="imgs\scav.png\" class="imgs">
                         <div class="featurestext">
-                            <p>1. Чем громче вы шумите, тем быстрее они приходят, так что держите палец на спуске.
-                            <br><br>2. Вступайте в бои с управляемыми ИИ местными мародерами Дикими, или попробуйте себя в роли одного из них - с заранее заданным произвольным снаряжением, состоянием здоровья и оружием.
-                            <br><br>3. Играя за них, не стоит бояться смерти, - ваш основной персонаж ничего не потеряет, но если вы выживете в роли Дикого - его добыча пополнит схрон вашего героя.</p>
+                            <p>1. Чем громче вы шумите, тем быстрее они приходят, так что держите палец на спуске.<br><br>2. Вступайте в бои с управляемыми ИИ местными мародерами Дикими, или попробуйте себя в роли одного из них - с заранее заданным произвольным снаряжением, состоянием здоровья и оружием.<br><br>3. Играя за них, не стоит бояться смерти, - ваш основной персонаж ничего не потеряет, но если вы выживете в роли Дикого - его добыча пополнит схрон вашего героя.</p>
                         </div>
                     </div>  
                 </ul>
             </section>
             <footer>
-
             </footer>
     </main>
 </body>
+</div>
+</div>
 </html>
