--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
                         <h2><img src="imgs\norvinsk.png" class="imgs">Схватка на краю пропасти.</h2>
                     </div>
                 </section>
+                <section class="music">
+                    <div class="musiccontainer">
+                        <img src="imgs\countdown.png" class="musicimg">
+                        <h3>Countdown - Geneburn</h3>
+                        <audio id="audioPlayer" src=""></audio>
+                        <div class="musicprogress">
+                            <button class="playbtn">
+                                <i class="fas fa-play"></i>
+                            </button>
+                            <div class="progressbar">
+                                <div class="progress"></div>
+                            </div>
+                            <div class="time">0:00 / 0:00</div>
+                        </div>
+                    </div>
+                </section>
                 <section class="comments">
                     <div>
                         <h2>Battle Encounter Assault Regiment</h2>
