--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
             <main>
                 <section class="about">
                     <a href="https://www.escapefromtarkov.com/"><img src="imgs\EFT.png\" id="EFT"></a>
-                    <h1 class="eftinfo">Это хардкорная реалистичная сюжетная многопользовательская онлайн-игра,
-                        сочетающая в себе черты жанров FPS / TPS, боевого симулятора и RPG c ММО элементами.
-                    </h1>
+                    <h3 class="eftinfo">Escape from Tarkov / Побег из Таркова - это хардкорная реалистичная сюжетная многопользовательская онлайн-игра, сочетающая в себе черты жанров FPS / TPS, боевого симулятора и RPG c ММО элементами.</h3>
+                    <h3 class="eftinfo">С каждым безвозвратно уходящим в прошлое днем ситуация в Норвинской области становится все более и более запутанной. Непрекращающиеся бои на улицах Таркова вызвали массовую панику среди населения, заполнив беженцами ведущие из него дороги. Нашлись, впрочем, среди местных жителей и те, кто решил остаться, увидев в возникшей ситуации возможность поживиться за чужой счет. Приняв новые реалии как данность, неорганизованные одиночки из числа обитателей Таркова - Дикие - стали сбиваться в хорошо вооруженные банды, дерущиеся друг с другом за передел города. Сегодня весь Тарков разграничен невидимыми линиями на зоны влияния различных группировок. В своей жажде наживы вооруженные бандиты не остановятся ни перед чем, их не пугают ни убийства гражданских лиц, ни прямые столкновения с двумя частными военными компаниями.</h3>
+                    <h3 class="eftinfo">Игрокам предстоит вжиться в роль одного из наемников, переживших начальную стадию Тарковского конфликта. После выбора одной из сторон – USEC или BEAR – персонаж игрока начинает свой нелегкий путь в поисках способа выбраться из города. Выходы из Таркова перекрыты миротворцами ООН и российскими войсками, все линии снабжения отрезаны, а связь с командованием утрачена. В таких условиях каждому приходится самому выбирать, как выжить, что делать, и как выбраться из погрузившегося в пучину хаоса мегаполиса.</h3>
                     <img src="imgs\getrdyfescape.png\" class="getready" id="getrdy">
+                    
+                </section>
+                <section class="about">
                     <div class="gameinfo">
                         <h2><img src="imgs\norvinsk.png" class="imgs">г. Тарков, Норвинская обл.</h2>
                         <h3>События Escape from Tarkov происходят в вымышленной Норвинской особой экономической
@@ -68,16 +71,16 @@
                 <section class="music">
                     <div class="musiccontainer">
                         <img src="imgs\countdown.png" class="musicimg">
-                        <h3>Countdown - Geneburn</h3>
-                        <audio id="audioPlayer" src=""></audio>
                         <div class="musicprogress">
+                        <h2>Countdown - Geneburn</h2>
+                        <audio id="audioPlayer" src="countdownmusic.mp3"></audio>
                             <button class="playbtn">
                                 <i class="fas fa-play"></i>
                             </button>
                             <div class="progressbar">
                                 <div class="progress"></div>
                             </div>
-                            <div class="time">0:00 / 0:00</div>
+                            <div class="time">0:00 / 2:52</div>
                         </div>
                     </div>
                 </section>
@@ -143,8 +146,8 @@
                     </ul>
                 </section>
             </main>
-            <footer>
-            </footer>
+            <!-- <footer>
+            </footer> -->
         </div>
     </div>
 </body>
